--- a/trunk/Docs/src/manual.texi
+++ b/trunk/Docs/src/manual.texi
@@ -1,7 +1,7 @@
 \input texinfo   @c -*-texinfo-*-
 @c %**start of header
 @setfilename manual.info
-@settitle OGRE Manual v1.0.2
+@settitle OGRE Manual v1.1.0
 @c %**end of header
    
 @titlepage
@@ -816,16 +816,116 @@ Default: max_lights 8@*
 
 Sets whether or not this pass is iterated, ie issued more than once.@*@*
 
-Format: iteration <once | once_per_light> [lightType]@*@*
-Example: iteration once_per_light point
+Basic Format: iteration <once | once_per_light> [lightType]@*@*
+Advanced Format: iteration <number> [<per_light> [lightType]]@*@*
+Examples:
+@table @asis
+@item iteration once
+	The pass is onle executed once which is the default behaviour.
+@item iteration once_per_light point
+	The pass is executed once for each point light.
+@item iteration 5
+	The render state for the pass will be setup and then the draw call will execute 5 times.
+@item iteration 5 per_light point
+	The render state for the pass will be setup and then the draw call will execute 5 times.  This will be done for each point light.
+@end table
+@*
 
 By default, passes are only issued once. However, if you use the programmable pipeline, or you wish to exceed the normal limits on the number of lights which are supported, you might want to use the once_per_light option. In this case, only light index 0 is ever used, and the pass is issued multiple times, each time with a different light in light index 0. Clearly this will make the pass more expensive, but it may be the only way to achieve certain effects such as per-pixel lighting effects which take into account 1..n lights.@*@*
 
+Using a number instead of "once" instructs the pass to iterate more than once after the render state is setup.  The render state is not changed after the initial setup so repeated draw calls are very fast and ideal for passes using programmable shaders that must iterate more than once with the same render state ie. shaders that do fur, motion blur, special filtering.@*@*
+
 If you use once_per_light, you should also add an ambient pass to the technique before this pass, otherwise when no lights are in range of this object it will not get rendered at all; this is important even when you have no ambient light in the scene, because you would still want the objects sihouette to appear.@*@*
 
-The second parameter to the attribute only applies if you use once_per_light, and restricts the pass to being run for lights of a single type (either 'point', 'directional' or 'spot'). In the example, the pass will be run once per point light. This can be useful because when you;re writing a vertex / fragment program it is a lot better if you can assume the kind of lights you'll be dealing with. 
+The second parameter to the attribute only applies if you use once_per_light or per_light, and restricts the pass to being run for lights of a single type (either 'point', 'directional' or 'spot'). In the example, the pass will be run once per point light. This can be useful because when you're writing a vertex / fragment program it is a lot better if you can assume the kind of lights you'll be dealing with. 
 @*@*
-Default: iteration once
+Default: iteration once@*@*
+
+@anchor{fur_example}
+Example: Simple Fur shader material script that uses a second pass with 10 iterations to grow the fur:
+@example
+// GLSL simple Fur
+vertex_program GLSLDemo/FurVS glsl 
+{ 
+  source fur.vert 
+  default_params
+  {
+    param_named_auto lightPosition light_position_object_space 0
+    param_named_auto eyePosition camera_position_object_space
+    param_named_auto passNumber pass_number
+    param_named_auto multiPassNumber pass_iteration_number
+    param_named furLength float 0.15
+  }
+} 
+
+fragment_program GLSLDemo/FurFS glsl 
+{ 
+  source fur.frag 
+  default_params
+  {
+    param_named Ka float 0.2
+    param_named Kd float 0.5
+    param_named Ks float 0.0
+    param_named furTU int 0
+  }
+} 
+
+material Fur
+{ 
+  technique GLSL
+  { 
+    pass base_coat
+    { 
+      ambient 0.7 0.7 0.7
+      diffuse 0.5 0.8 0.5
+      specular 1.0 1.0 1.0 1.5
+
+      vertex_program_ref GLSLDemo/FurVS
+      {
+      }
+
+      fragment_program_ref GLSLDemo/FurFS 
+      { 
+      } 
+
+      texture_unit
+      {
+        texture Fur.tga
+        tex_coord_set 0
+        filtering trilinear
+      }
+
+    } 
+
+    pass grow_fur
+    { 
+      ambient 0.7 0.7 0.7
+      diffuse 0.8 1.0 0.8
+      specular 1.0 1.0 1.0 64
+      depth_write off
+
+      scene_blend src_alpha one
+      iteration 10
+      
+      vertex_program_ref GLSLDemo/FurVS
+      {
+      }
+
+      fragment_program_ref GLSLDemo/FurFS
+      {
+      }
+
+      texture_unit
+      {
+        texture Fur.tga
+        tex_coord_set 0
+        filtering trilinear
+      }
+    } 
+  } 
+}
+@end example
+Note: use gpu program auto parameters @ref{pass_number} and @ref{pass_iteration_number} to tell the vertex or fragment program the pass number and iteration number.
 
 @node Texture Units
 @subsection Texture Units
@@ -1518,8 +1618,12 @@ Near clip distance, in world units
 Far clip distance, in world units (may be 0 for infinite view projection)
 @item texture_viewproj_matrix
 Only applicable to vertex programs which have been specified as the 'shadow receiver' vertex program alternative; this provides details of the view/projection matrix for the current shadow projector.
+@anchor{pass_number}
 @item pass_number
-Sets the active pass index number in a gpu parameter.  The first pass in a technique has an index of 0, the second an index of 1 and so on.  This is usefull for multipass shaders (ie fur or blur shader) that need to know what pass it is.  By setting up the auto parameter in a @ref{Default Program Parameters} list in a program definition, there is no requirement to set the pass number parameter in each pass and lose track.
+Sets the active pass index number in a gpu parameter.  The first pass in a technique has an index of 0, the second an index of 1 and so on.  This is usefull for multipass shaders (ie fur or blur shader) that need to know what pass it is.  By setting up the auto parameter in a @ref{Default Program Parameters} list in a program definition, there is no requirement to set the pass number parameter in each pass and lose track. (@xref{fur_example})
+@anchor{pass_iteration_number}
+@item pass_iteration_number
+Usefull for GPU programs that need to know what the current pass iteration number is. The first iteration of a pass is numbered 0.  The last iteration number is one less than what is set for the pass iteration number.  If a pass has its iteration attribute set to 5 then the last iteration number (5th execution of the pass) is 4.(@xref{iteration})
 @item animation_parametric
 Useful for hardware morph animation. Sets the parametric value (0..1) representing the distance between the first position keyframe (bound to positions) and the second position keyframe (bound to the first free texture coordinate) so that the vertex program can interpolate between them.
 @item custom
