--- a/trunk/Docs/src/manual.texi
+++ b/trunk/Docs/src/manual.texi
@@ -1347,17 +1347,56 @@ As you can see, that's very simple, and defining a fragment program is exactly t
 
 The current supported syntaxes are:
 @table @asis
-@item vs_1_1, vs_2_0, vs_2_x, vs_3_0
-These are the DirectX vertex shader assembler syntaxes. 
+@item vs_1_1
+This is one of the DirectX vertex shader assembler syntaxes. @*
+Supported on cards from: ATI Radeon 8500, nVidia GeForce 3 @*
+@item vs_2_0
+Another one of the DirectX vertex shader assembler syntaxes. @*
+Supported on cards from: ATI Radeon 9600, nVidia GeForce FX 5 series @*
+@item vs_2_x
+Another one of the DirectX vertex shader assembler syntaxes. @*
+Supported on cards from: ATI Radeon X series, nVidia GeForce FX 6 series @*
+@item vs_3_0
+Another one of the DirectX vertex shader assembler syntaxes. @*
+Supported on cards from: nVidia GeForce FX 6 series
 @item arbvp1
 This is the OpenGL standard assembler format for vertex programs. It's roughly equivalent to DirectX vs_1_1.
-@item ps_1_1, ps_1_2, ps_1_3, ps_1_4, ps_2_0, ps_2_x, ps_3_0, ps_3_x
-These are the DirectX pixel shader (ie fragment program) assembler syntaxes.@*
-NOTE: for ATI 8500, 9000, 9100, 9200 hardware, ps_1_1 to ps_1_4 can also be used in OpenGL.  The ATI 8500 to 9200 do not support arbfp1 but do support atifs extension in OpenGL which is very similar in function to ps_1_4 in DirectX.  Ogre has a built in ps_1_x to atifs compiler that is automatically invoked when ps_1_x is used in OpenGL on ATI hardware.
+@item vp20
+This is an nVidia-specific OpenGL vertex shader syntax which is a superset of vs 1.1. 
+@item vp30
+Another nVidia-specific OpenGL vertex shader syntax. It is a superset of vs 2.0, which is supported on nVidia GeForce FX 5 series and higher.
+@item vp40
+Another nVidia-specific OpenGL vertex shader syntax. It is a superset of vs 3.0, which is supported on nVidia GeForce FX 6 series and higher.
+@item ps_1_1, ps_1_2, ps_1_3
+DirectX pixel shader (ie fragment program) assembler syntax. @*
+Supported on cards from: ATI Radeon 8500, nVidia GeForce 3 @*
+NOTE: for ATI 8500, 9000, 9100, 9200 hardware, this profile can also be used in OpenGL.  The ATI 8500 to 9200 do not support arbfp1 but do support atifs extension in OpenGL which is very similar in function to ps_1_4 in DirectX.  Ogre has a built in ps_1_x to atifs compiler that is automatically invoked when ps_1_x is used in OpenGL on ATI hardware.
+@item ps_1_4
+DirectX pixel shader (ie fragment program) assembler syntax. @*
+Supported on cards from: ATI Radeon 8500, nVidia GeForce FX 5 series @*
+NOTE: for ATI 8500, 9000, 9100, 9200 hardware, this profile can also be used in OpenGL.  The ATI 8500 to 9200 do not support arbfp1 but do support atifs extension in OpenGL which is very similar in function to ps_1_4 in DirectX.  Ogre has a built in ps_1_x to atifs compiler that is automatically invoked when ps_1_x is used in OpenGL on ATI hardware.
+@item ps_2_0
+DirectX pixel shader (ie fragment program) assembler syntax. @*
+Supported cards: ATI Radeon 9600, nVidia GeForce FX 5 series@*
+@item ps_2_x
+DirectX pixel shader (ie fragment program) assembler syntax. This is basically
+ps_2_0 with a higher number of instructions. @*
+Supported cards: ATI Radeon X series, nVidia GeForce FX 6 series@*
+@item ps_3_0
+DirectX pixel shader (ie fragment program) assembler syntax. @*
+Supported cards: nVidia GeForce FX6 series@*
+@item ps_3_x
+DirectX pixel shader (ie fragment program) assembler syntax. @*
+Supported cards: nVidia GeForce FX7 series@*
 @item arbfp1
 This is the OpenGL standard assembler format for fragment programs. It's roughly equivalent to ps_2_0, which means that not all cards that support basic pixel shaders under DirectX support arbfp1 (for example neither the GeForce3 or GeForce4 support arbfp1, but they do support ps_1_1).
 @item fp20
-This is an nVidia-specific OpenGL syntax which allows you to use the 'nvparse' format for basic fragment programs. It actually uses NV_texture_shader and NV_register_combiners to provide functionality equivalent to DirectX's ps_1_1 under GL, but only for nVidia cards. However, since ATI cards adopted arbfp1 a little earlier than nVidia, it is mainly nVidia cards like the GeForce3 and GeForce4 that this will be useful for. You can find more information about nvparse at http://developer.nvidia.com/object/nvparse.html.
+This is an nVidia-specific OpenGL fragment syntax which is a superset of ps 1.3. It allows you to use the 'nvparse' format for basic fragment programs. It actually uses NV_texture_shader and NV_register_combiners to provide functionality equivalent to DirectX's ps_1_1 under GL, but only for nVidia cards. However, since ATI cards adopted arbfp1 a little earlier than nVidia, it is mainly nVidia cards like the GeForce3 and GeForce4 that this will be useful for. You can find more information about nvparse at http://developer.nvidia.com/object/nvparse.html.
+@item fp30
+Another nVidia-specific OpenGL fragment shader syntax. It is a superset of ps 2.0, which is supported on nVidia GeForce FX 5 series and higher.
+@item fp40
+Another nVidia-specific OpenGL fragment shader syntax. It is a superset of ps 3.0, which is supported on nVidia GeForce FX 6 series and higher.
+
 @end table
 
 You can get a definitive list of the syntaxes supported by the current card by calling GpuProgramManager::getSingleton().getSupportedSyntax().@*@*
